--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inmobiliaria Costa Azul</title>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSNF1jm3xlM-rG8cE4sr4h-yjq4moxFcA&callback=initMap"></script>
   </head>
   <body>
     <div id="root"></div>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSNF1jm3xlM-rG8cE4sr4h-yjq4moxFcA=initMap"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
