--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Inmobiliaria Costa Azul</title>
 
     <!-- Google Maps API correctamente configurado -->
-    <script async="false" type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=<YOUR KEY>-39Fxo&libraries=places&callback=initMap"></script>
+    <script async="false" type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSNF1jm3xlM-rG8cE4sr4h-yjq4moxFcA&libraries=places&callback=initMap"></script>
   </head>
   <body>
     <div id="root"></div>
