--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <div id="root"></div>
 
     <!-- Script de React cargado correctamente -->
-    <script type="module" defer src="/src/main.tsx"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
